--- a/main.html
+++ b/main.html
@@ -25,6 +25,6 @@
     <div id="transition-frame"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <script defer src="test.js"></script>
+    <script defer src="javascript/main.js"></script>
 </body>
 </html>
