Started implementing menu (page style + behavior)

--- a/galerie.html
+++ b/galerie.html
@@ -12,7 +12,7 @@
     <header> <h1>I Frati Linguini</h1> </header>
 
     <div id="container">
-        <h4>Si vous avez passé una bueno momento n'hésitez pas à partager votre photo avec una piccolo mot gentito</h4>
+        <h4>Si vous avez passé una bueno momento n'hésitez pas à partager votre photo</h4>
 
         <div id="carrousel">
             <button id="previous">
