--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,25 @@
     <link href="css/menu.css" rel="stylesheet">
 </head>
 <body>
+    <div id="pop-up"></div>
+    <header> <h1>I Frati Linguini</h1> </header>
 
+    <div id="menu-container">
+        <div id="menu">
+            <nav id="filtres">
+                <li filter="all">Tout</li>
+                <li filter="aperitifs">Apéritifs</li>
+                <li filter="plats">Plats</li>
+                <li filter="desserts">Désserts</li>
+            </nav>
+
+            <div id="card-container">
+                <img class="card">
+
+            </div>
+        </div>
+    </div>
 
 </body>
+<script defer src="javascript/menu.js" type="module"></script>
 </html>
