--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,15 @@
     <link href="css/menu.css" rel="stylesheet">
 </head>
 <body>
-    <div id="pop-up"></div>
+    <div id="pop-up">
+        <div id="display-card">
+            <img src="assets/img/pates.jfif">
+            <h1>Title </h1>
+            <h4>Description</h4>
+            <p>Ingrédients</p>
+        </div>
+
+    </div>
     <header> <h1>I Frati Linguini</h1> </header>
 
     <div id="menu-container">
@@ -22,8 +30,7 @@
             </nav>
 
             <div id="card-container">
-                <img class="card">
-
+                <!--Elements are placed at runtime-->
             </div>
         </div>
     </div>
