Started working on burger menu

--- a/menu.html
+++ b/menu.html
@@ -4,11 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linguini - Menu</title>
+    <link href="css/base.css" rel="stylesheet">
     <link href="css/utils.css" rel="stylesheet">
     <link href="css/anims.css" rel="stylesheet">
     <link href="css/menu.css" rel="stylesheet">
 </head>
 <body>
+    <div id="burger-button">
+        <div></div>
+    </div>
     <div id="pop-up">
         <div id="display-card">
             <img src="assets/img/pates.jfif">
@@ -36,5 +40,6 @@
     </div>
 
 </body>
+<script defer src="javascript/base.js"></script>
 <script defer src="javascript/menu.js" type="module"></script>
 </html>
