Finished Menu, implementing nav in other pages

--- a/menu.html
+++ b/menu.html
@@ -14,11 +14,22 @@
         <div></div>
     </div>
     <div id="pop-up">
+        <div id="burger-menu">
+            <h1>~ Menu ~</h1>
+            <nav>
+                <a href="main.html">Accueil</a>
+                <a href="menu.html">Menu</a>
+                <a href="presentation.html">Présentation</a>
+                <a href="galerie.html">Galerie</a>
+            </nav>
+        </div>
         <div id="display-card">
             <img src="assets/img/pates.jfif">
-            <h1>Title </h1>
-            <h4>Description</h4>
-            <p>Ingrédients</p>
+            <div id="text">
+                <h1>Title </h1>
+                <h4>Description</h4>
+                <p>Ingrédients</p>
+            </div>
         </div>
 
     </div>
