--- a/galerie.html
+++ b/galerie.html
@@ -4,11 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linguini - Galerie</title>
+    <link href="css/base.css" rel="stylesheet">
     <link href="css/utils.css" rel="stylesheet">
     <link href="css/anims.css" rel="stylesheet">
     <link href="css/galerie.css" rel="stylesheet">
 </head>
 <body>
+    <div id="burger-button">
+        <div></div>
+    </div>
+    <div id="pop-up">
+        <div id="burger-menu">
+            <h1>~ Menu ~</h1>
+            <nav>
+                <a href="main.html">Accueil</a>
+                <a href="menu.html">Menu</a>
+                <a href="presentation.html">Présentation</a>
+                <a href="galerie.html">Galerie</a>
+            </nav>
+        </div>
+    </div>
     <header> <h1>I Frati Linguini</h1> </header>
 
     <div id="container">
@@ -34,6 +49,7 @@
 
     </div>
 
+    <script defer src="javascript/base.js"></script>
     <script defer src="javascript/galerie.js"></script>
 </body>
 </html>
