- Last commit + Finished All menu content
+ BENJAMIN : 'presentation' page
+ BENJAMIN : 'contact' page

+ Implemented menu in every page

--- a/galerie.html
+++ b/galerie.html
@@ -20,6 +20,7 @@
                 <a href="main.html">Accueil</a>
                 <a href="menu.html">Menu</a>
                 <a href="presentation.html">Présentation</a>
+                <a href="contact.html">Contact</a>
                 <a href="galerie.html">Galerie</a>
             </nav>
         </div>
