--- a/menu.html
+++ b/menu.html
@@ -20,11 +20,12 @@
                 <a href="main.html">Accueil</a>
                 <a href="menu.html">Menu</a>
                 <a href="presentation.html">Présentation</a>
+                <a href="contact.html">Contact</a>
                 <a href="galerie.html">Galerie</a>
             </nav>
         </div>
         <div id="display-card">
-            <img src="assets/img/pates.jfif">
+            <img src="">
             <div id="text">
                 <h1>Title </h1>
                 <h4>Description</h4>
