--- a/presentation.html
+++ b/presentation.html
@@ -4,18 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/utils.css">
-    <link href="presentation.CSS" rel="stylesheet">
+    <link href="css/presentation.css" rel="stylesheet">
 </head>
 <body>
-    <div id = 'header'> 
-        <p>HEADER</p>
+    <div id="burger-button">
+        <div></div>
     </div>
-    <div id = 'corps'>
-        <div id = 'Mario'> <div class = 'espace'></div><div class = 'texte'> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div></div>
-        <div id = 'Restaurant'><div class ='texte'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum </div><div class = 'espace'></div></div>
-        <div id ='last'> <div class = 'espace'></div><div class ='texte'>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</div></div>
+    <div id="pop-up">
+        <div id="burger-menu">
+            <h1>~ Menu ~</h1>
+            <nav>
+                <a href="main.html">Accueil</a>
+                <a href="menu.html">Menu</a>
+                <a href="presentation.html">Présentation</a>
+                <a href="contact.html">Contact</a>
+                <a href="galerie.html">Galerie</a>
+            </nav>
+        </div>
+
+    </div>
+    <header> <h1>I Frati Linguini</h1> </header>
+    <script src="javascript/base.js"></script>
+
+
+<div id="presentation-container">
+    <div id="presentation">
+    
+        <div id ="container1" class ='container'>
+        <div class = 'image'><img src='assets\img\2hommes.jpg'></div>
+        <div class = 'texte'> Voici une photo non contractuelle des frères Linguinni ayant l'idée de ce restaurant. La famille linguinni est une famille italienne qui est très connue dans Venise pour sa cuisine dont on se souvient toute sa vie après y avoir gouté. C'est en -50 avant Jesus-Christ que les frères Linguinni urent l'idée de ce restaurant</div>
+    </div>
+    <div id ='container2' class ='container'>
+        <div class = 'texte'>C'est peu après le succès de leur premier restaurant à Venise qu'ils décidèrent de s'éxpendre et d'ouvrir des restaurants dans le monde entier.</div><div class = 'image'>
+        <img src='assets\img\restaurant.jpg'></div>
+    </div>
+    <div id= "container3" class ='container'>
+        <div class = 'image'><img src='assets\img\venise.jpg'></div>
+        <div class = 'texte'> Manger dans nos restaurants n'est pas seulement une expérience culinaire créant l'un des plus grand plaisir possible en bouche mais également un voyage. Un voyage en Italie, plus précisément à Venise. Déguster un bon repas chez les frères linguinni nous bercent comme les gondoles sur l'eau.</div>
     </div>
     
+    </div>
+</div>
 </body>
-</html>
